--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -163,3 +163,9 @@ toggle-background::after {
   justify-content: center;
   align-items: center;
 }
+#additionalinformation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
