changed app to full height

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  top: 5%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#footer {
+  position: absolute;
+  top: 96%;
+  margin: auto;
+  width: 100%;
 }
