--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -152,43 +152,92 @@ cloud {
 #star3 {
   position: absolute;
   top: 1rem;
-
   z-index: 0;
   right: 3.5rem;
 }
 
-#parent {
-  display: flex;
-
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 #wordcontainer {
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  flex-shrink: 1;
   align-items: center;
 }
-#formcontainer {
+#mainpage {
   display: flex;
-
+  height: 80%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
+  flex-shrink: 1;
 }
+
 #form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-shrink: 1;
+  gap: 0.5rem;
+}
+#form > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 1;
+  gap: 0.5rem;
+}
+#formcontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 #additionalinformation {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+#invite {
+}
+#info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  flex-shrink: 1;
+}
+ul {
+  list-style-type: none;
+}
+#datetimeplace {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+#formcontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+li {
+  display: flex;
+  flex: 1;
+  margin-top: 0.5rem;
+  justify-self: flex-start;
+  align-items: center;
+}
+.icon {
+  color: rgb(63, 63, 171);
+  margin-right: 0.5rem;
+  filter: drop-shadow(1px 1px 1px #666);
 }
 #sidebar a.active {
   color: red;
