--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@ body {
 #root {
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow: scroll;
 }
 #App {
   position: relative;
@@ -181,7 +181,7 @@ cloud {
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 2.5rem;
 }
 
 #form {
@@ -272,30 +272,29 @@ li {
   }
 }
 #footer {
-  position: absolute;
-  top: 96%;
+  top: 96vh;
   margin: auto;
   width: 100%;
   height: 1rem;
   display: flex;
   justify-content: center;
+
+  position: fixed;
 }
 a {
   text-decoration: none;
 }
-@media (max-height: 800px) {
+@media (max-height: 800px) and (min-height: 500px) {
   #mainpage {
     top: 25%;
   }
-  #footer {
-    display: none;
-  }
 }
+
 @media /*only screen and(orientation: landscape) or*/ (max-height: 500px) {
   #mainpage {
     display: none;
   }
   #footer {
-    top: 50%;
+    top: 55%;
   }
 }
